# tightsocks

./: CMakeLists.txt  README.md  homesocks.cbp  main.c
include/: convert.h  db.h  dnslookup.h  io.h  message.h  methods.h  socks.h  types.h  utils.h
misc/: chrono.c  chrono.h  defs.h  utils.c  utils.h  wrappers.c  wrappers.h
network/: io.c  io.h
protocol/: commands.c  commands.h  method_exchange.c  method_exchange.h  reply.c  reply.h  request.c  request.h
protocol/commands/: bind.c  bind.h  connect.c  connect.h  udp_associate.c  udp_associate.h
protocol/methods/: userpass.c  userpass.h
src/: convert.c  db.c  dnslookup.c  io.c  message.c  methods.c  socks.c  types.c  utils.c
system/: args.c  args.h  firewall.c  firewall.h  log.c  log.h  options.c  options.h  server.c  server.h  users.c  users.h
